<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundPoster"
    tools:context=".ui.activities.AboutMoviePage">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_about_movie"
        android:padding="1dp">

        <TextView
            android:id="@+id/imdbRating"
            android:layout_width="176dp"
            android:layout_height="105dp"
            android:background="@drawable/top_bottom_border_white"
            android:fontFamily="@font/francois_one"
            android:gravity="center_horizontal"
            android:paddingTop="15dp"
            android:text="@string/imdb"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/imdbValue"
            android:layout_width="176dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/francois_one"
            android:gravity="center"
            android:paddingTop="60dp"
            android:text="@string/n_a"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/rottenTomatoes"
            android:layout_width="176dp"
            android:layout_height="103dp"
            android:background="@drawable/border_white_bottom"
            android:fontFamily="@font/francois_one"
            android:gravity="center_horizontal"
            android:paddingStart="10dp"
            android:paddingTop="15dp"
            android:text="@string/rotten_tomatoes"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imdbRating" />

        <TextView
            android:id="@+id/rottenTomatoes2"
            android:layout_width="176dp"
            android:layout_height="110dp"
            android:fontFamily="@font/francois_one"
            android:gravity="center_horizontal"
            android:paddingTop="15dp"
            android:text="@string/date_of_release"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rottenTomatoes" />

        <TextView
            android:id="@+id/rottenTomatoesValue"
            android:layout_width="176dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/francois_one"
            android:gravity="center"
            android:paddingTop="160dp"
            android:text="@string/n_a"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/dateOfRelease"
            android:layout_width="176dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/francois_one"
            android:gravity="center"
            android:paddingTop="265dp"
            android:text="@string/n_a"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/poster"
            android:layout_width="190dp"
            android:layout_height="298dp"
            android:background="@drawable/border_full_white"
            android:padding="1dp"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/rottenTomatoes"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            tools:srcCompat="@drawable/error"
            android:contentDescription="@string/todo" />

        <LinearLayout
            android:id="@+id/listOf"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/top_bottom_border_white"
            android:orientation="vertical"
            android:paddingTop="298dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0">

            <TextView
                android:id="@+id/rated"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/top_bottom_border_white"
                android:fontFamily="@font/francois_one"
                android:gravity="center"
                android:paddingLeft="5dp"
                android:paddingTop="10dp"
                android:paddingRight="5dp"
                android:paddingBottom="10dp"
                android:text="@string/rated"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/boxOffice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/top_bottom_border_white"
                android:fontFamily="@font/francois_one"
                android:gravity="center"
                android:paddingLeft="5dp"
                android:paddingTop="10dp"
                android:paddingRight="5dp"
                android:paddingBottom="10dp"
                android:text="@string/fees"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/director"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/top_bottom_border_white"
                android:fontFamily="@font/francois_one"
                android:gravity="center"
                android:paddingLeft="5dp"
                android:paddingTop="10dp"
                android:paddingRight="5dp"
                android:paddingBottom="10dp"
                android:text="@string/director"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/writer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/top_bottom_border_white"
                android:fontFamily="@font/francois_one"
                android:gravity="center"
                android:paddingLeft="5dp"
                android:paddingTop="10dp"
                android:paddingRight="5dp"
                android:paddingBottom="10dp"
                android:text="@string/writer"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/actors"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/top_bottom_border_white"
                android:fontFamily="@font/francois_one"
                android:gravity="center"
                android:paddingLeft="5dp"
                android:paddingTop="10dp"
                android:paddingRight="5dp"
                android:paddingBottom="10dp"
                android:text="@string/actors"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/genre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border_white_bottom"
                android:fontFamily="@font/francois_one"
                android:gravity="center"
                android:paddingLeft="5dp"
                android:paddingTop="10dp"
                android:paddingRight="5dp"
                android:paddingBottom="10dp"
                android:text="@string/genre"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/country"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/top_bottom_border_white"
                android:fontFamily="@font/francois_one"
                android:gravity="center"
                android:paddingLeft="5dp"
                android:paddingTop="10dp"
                android:paddingRight="5dp"
                android:paddingBottom="10dp"
                android:text="@string/country"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/plot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border_white_bottom"
                android:fontFamily="@font/francois_one"
                android:gravity="center"
                android:paddingLeft="5dp"
                android:paddingTop="10dp"
                android:paddingRight="5dp"
                android:paddingBottom="10dp"
                android:text="@string/plot"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/language"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/top_bottom_border_white"
                android:fontFamily="@font/francois_one"
                android:gravity="center"
                android:paddingLeft="5dp"
                android:paddingTop="10dp"
                android:paddingRight="5dp"
                android:paddingBottom="10dp"
                android:text="@string/language"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/awards"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/top_bottom_border_white"
                android:fontFamily="@font/francois_one"
                android:gravity="center"
                android:paddingLeft="5dp"
                android:paddingTop="10dp"
                android:paddingRight="5dp"
                android:paddingBottom="10dp"
                android:text="@string/awards"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/runtime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/top_bottom_border_white"
                android:fontFamily="@font/francois_one"
                android:gravity="center"
                android:paddingLeft="5dp"
                android:paddingTop="10dp"
                android:paddingRight="5dp"
                android:paddingBottom="10dp"
                android:text="@string/runtime"
                android:textColor="@color/white" />

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>