<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/row"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/popular_movie_item"
    android:clickable="true"
    android:paddingTop="10dp"
    android:paddingBottom="10dp"
    android:focusable="true">

    <TextView
        android:id="@+id/movieName"
        android:layout_width="161dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/francois_one"
        android:gravity="center"
        android:text="@string/textview"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.84"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.005" />

    <ImageView
        android:id="@+id/moviePoster"
        android:layout_width="157dp"
        android:layout_height="196dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.024"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:srcCompat="@tools:sample/avatars"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/boxOffice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/francois_one"
        android:gravity="center"
        android:text="@string/imdb"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/otherSource"
        app:layout_constraintHorizontal_bias="0.766"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movieName"
        app:layout_constraintVertical_bias="0.61" />

    <TextView
        android:id="@+id/valueIMDB"
        android:layout_width="29dp"
        android:layout_height="24dp"
        android:fontFamily="@font/francois_one"
        android:gravity="center"
        android:text="@string/n_a"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/otherSource"
        app:layout_constraintHorizontal_bias="0.767"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/boxOffice"
        app:layout_constraintVertical_bias="0.0
" />

    <TextView
        android:id="@+id/rottenTomatoesValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/francois_one"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.851"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/otherSource"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/otherSource"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/francois_one"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.939"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movieName"
        app:layout_constraintVertical_bias="0.61" />

    <TextView
        android:id="@+id/dateOfRelease"
        android:layout_width="161dp"
        android:layout_height="22dp"
        android:fontFamily="@font/francois_one"
        android:gravity="center"
        android:text="@string/n_a"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.84"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movieName"
        app:layout_constraintVertical_bias="0.108" />
</androidx.constraintlayout.widget.ConstraintLayout>